--- a/Gondwana.Design/App.config
+++ b/Gondwana.Design/App.config
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="Gondwana" type="Gondwana.Common.Configuration.EngineConfiguration, Gondwana.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" overrideModeDefault="Allow" restartOnExternalChanges="true" requirePermission="true" />
+    <section name="Gondwana" type="Gondwana.Common.Configuration.EngineConfiguration, Gondwana.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" overrideModeDefault="Allow" restartOnExternalChanges="true" requirePermission="true"/>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <Gondwana>
-    <Settings TargetFPS="240" SamplingTimeForCPS="1.5" TimeBetweenKeyboardEvents="0.03"
-        VisibleSurfaceRefreshTimer="1.5" ThrowExceptionOnMCIError="false"
-        ResizedFrameCacheLimit="123" />
+    <Settings TargetFPS="240" SamplingTimeForCPS="1.5" TimeBetweenKeyboardEvents="0.03" VisibleSurfaceRefreshTimer="1.5" ThrowExceptionOnMCIError="false" ResizedFrameCacheLimit="123"/>
   </Gondwana>
 </configuration>
