--- a/Gondwana.Common/Gondwana.Common.csproj
+++ b/Gondwana.Common/Gondwana.Common.csproj
@@ -1,152 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2AA95F8C-107E-4828-B78B-73E6806BFAF9}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gondwana.Common</RootNamespace>
-    <AssemblyName>Gondwana.Common</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Gondwana.Common.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Configuration\EngineConfiguration.cs" />
-    <Compile Include="Configuration\EngineSettings.cs" />
-    <Compile Include="Configuration\EngineStateFile.cs" />
-    <Compile Include="Configuration\EngineStateFiles.cs" />
-    <Compile Include="Utility\BinarySerializer.cs" />
-    <Compile Include="Collisions\Collision.cs" />
-    <Compile Include="Collisions\CollisionDetectionAdjustment.cs" />
-    <Compile Include="Drawing\Sprites\CompositeSprite.cs" />
-    <Compile Include="Drawing\Animation\Animator.cs" />
-    <Compile Include="Drawing\Animation\Cycle.cs" />
-    <Compile Include="Drawing\Animation\FrameSequence.cs" />
-    <Compile Include="Drawing\Tilesheet.cs" />
-    <Compile Include="Drawing\Direct\DirectDrawing.cs" />
-    <Compile Include="Drawing\Direct\DirectImage.cs" />
-    <Compile Include="Drawing\Direct\DirectRectangle.cs" />
-    <Compile Include="Drawing\Direct\Text.cs" />
-    <Compile Include="Drawing\Frame.cs" />
-    <Compile Include="Drawing\RefreshQueue.cs" />
-    <Compile Include="Drawing\Sprites\Movement.cs" />
-    <Compile Include="Drawing\Sprites\MovePoint.cs" />
-    <Compile Include="Drawing\Sprites\Sprite.cs" />
-    <Compile Include="Drawing\Sprites\Sprites.cs" />
-    <Compile Include="EngineState.cs" />
-    <Compile Include="Enums\CollisionDetection.cs" />
-    <Compile Include="Enums\CollisionDirectionFrom.cs" />
-    <Compile Include="Enums\CycleType.cs" />
-    <Compile Include="Enums\EffectDirection.cs" />
-    <Compile Include="Enums\HorizontalAlignment.cs" />
-    <Compile Include="Enums\MatrixesRefreshType.cs" />
-    <Compile Include="Enums\TimerCycles.cs" />
-    <Compile Include="Enums\TimerType.cs" />
-    <Compile Include="Enums\VerticalAlignment.cs" />
-    <Compile Include="EventArgs\AnimatorEventArgs.cs" />
-    <Compile Include="EventArgs\CollisionEventArgs.cs" />
-    <Compile Include="EventArgs\CyclesPerSecondCalculatedEventArgs.cs" />
-    <Compile Include="EventArgs\BitmapPropertiesDisposedEventArgs.cs" />
-    <Compile Include="EventArgs\EngineCycleEventArgs.cs" />
-    <Compile Include="EventArgs\GridPointMatrixAddRemoveEventArgs.cs" />
-    <Compile Include="EventArgs\GridPointMatrixDisposingEventArgs.cs" />
-    <Compile Include="EventArgs\GridPointMatrixesDisposingEventArgs.cs" />
-    <Compile Include="EventArgs\GridPointMatrixWrappingChangedEventArgs.cs" />
-    <Compile Include="EventArgs\GridPointSizeChangedEventArgs.cs" />
-    <Compile Include="EventArgs\RefreshQueueAreaAddedEventArgs.cs" />
-    <Compile Include="EventArgs\SourceGridPointChangedEventArgs.cs" />
-    <Compile Include="EventArgs\SpriteDisposingEventArgs.cs" />
-    <Compile Include="EventArgs\SpriteMovedEventArgs.cs" />
-    <Compile Include="EventArgs\SpriteMovementEventArgs.cs" />
-    <Compile Include="EventArgs\SpriteMovePointFinishedEventArgs.cs" />
-    <Compile Include="EventArgs\TimerEventArgs.cs" />
-    <Compile Include="EventArgs\VisibleChangedEventArgs.cs" />
-    <Compile Include="EventArgs\ShowGridLinesChangedEventArgs.cs" />
-    <Compile Include="EventArgs\VisibleSufaceBindEventArgs.cs" />
-    <Compile Include="Exceptions\GondwanaSettingException.cs" />
-    <Compile Include="Exceptions\ResolutionChangeException.cs" />
-    <Compile Include="Grid\GridPoint.cs" />
-    <Compile Include="Grid\GridPointMatrix.cs" />
-    <Compile Include="Grid\GridPointMatrixes.cs" />
-    <Compile Include="Grid\GridPointMatrixScrollBinding.cs" />
-    <Compile Include="Timers\HighPerfTimer.cs" />
-    <Compile Include="IBackbuffer.cs" />
-    <Compile Include="IGridCoordinates.cs" />
-    <Compile Include="Enums\CardinalDirections.cs" />
-    <Compile Include="VisibleSurfaceBase.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tile.cs" />
-    <Compile Include="Timers\Timer.cs" />
-    <Compile Include="Timers\Timers.cs" />
-    <Compile Include="VisibleSurfaces.cs" />
-    <Compile Include="Win32\BITMAP.cs" />
-    <Compile Include="Win32\COLORREF.cs" />
-    <Compile Include="Win32\DEVMODE1.cs" />
-    <Compile Include="Win32\DisplaySettingsConstants.cs" />
-    <Compile Include="Win32\NativeMessage.cs" />
-    <Compile Include="Win32\pInvoke.cs" />
-    <Compile Include="Win32\WIN32Support.cs" />
-    <Compile Include="Win32\TernaryRasterOperations.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Gondwana.Media\Gondwana.Media.csproj">
-      <Project>{ed8321ec-4bd3-4aa6-8bd0-83ea7dcd2ae4}</Project>
-      <Name>Gondwana.Media</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Gondwana.Resource\Gondwana.Resource.csproj">
-      <Project>{5f0752e1-37fd-4046-9d5e-edb95db14129}</Project>
-      <Name>Gondwana.Resource</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+	<PropertyGroup>
+		<TargetFramework>net8.0-windows</TargetFramework>
+		<OutputType>Library</OutputType>
+		<RootNamespace>Gondwana.Common</RootNamespace>
+		<AssemblyName>Gondwana.Common</AssemblyName>
+		<UseWindowsForms>true</UseWindowsForms>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="NAudio" Version="2.2.1" />
+	  <PackageReference Include="SharpZipLib" Version="1.4.2" />
+	</ItemGroup>
+
 </Project>
