--- a/TestHarness/GondwanaWinTest/GondwanaWinTest.csproj
+++ b/TestHarness/GondwanaWinTest/GondwanaWinTest.csproj
@@ -1,120 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6ED0ECF3-1B0A-4A1F-9EEF-A25D717D0BBA}</ProjectGuid>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GondwanaWinTest</RootNamespace>
-    <AssemblyName>GondwanaWinTest</AssemblyName>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
     <Reference Include="System.configuration" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resource1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource1.resx</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <EmbeddedResource Include="Resource1.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="App.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Gondwana.Common\Gondwana.Common.csproj">
-      <Project>{2aa95f8c-107e-4828-b78b-73e6806bfaf9}</Project>
-      <Name>Gondwana.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Gondwana.Coordinates\Gondwana.Coordinates.csproj">
-      <Project>{D246B45A-2EDE-4C25-8226-389416C30DBB}</Project>
-      <Name>Gondwana.Coordinates</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Gondwana.Input\Gondwana.Input.csproj">
-      <Project>{A140B921-DD8D-4CFF-9103-3DC212EE1644}</Project>
-      <Name>Gondwana.Input</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Gondwana.Rendering\Gondwana.Rendering.csproj">
-      <Project>{fd33e739-1a43-4168-9c89-44c33c996dc7}</Project>
-      <Name>Gondwana.Rendering</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Gondwana\Gondwana.csproj">
-      <Project>{32624317-3792-4DF7-8F56-2AA81D5A4036}</Project>
-      <Name>Gondwana</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\Gondwana.Common\Gondwana.Common.csproj" />
+    <ProjectReference Include="..\..\Gondwana.Coordinates\Gondwana.Coordinates.csproj" />
+    <ProjectReference Include="..\..\Gondwana.Input\Gondwana.Input.csproj" />
+    <ProjectReference Include="..\..\Gondwana.Rendering\Gondwana.Rendering.csproj" />
+    <ProjectReference Include="..\..\Gondwana\Gondwana.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="resources\2.mov" />
@@ -130,7 +33,6 @@
     <Content Include="resources\fox-wtc7.wmv" />
     <Content Include="resources\glass.wmv" />
     <Content Include="resources\house.wma" />
-    <None Include="resources\Image1.bmp" />
     <Content Include="resources\jeanne.wma" />
     <Content Include="resources\laure.wma" />
     <Content Include="resources\laure_multi.wma" />
@@ -150,13 +52,4 @@
     <Content Include="XMLFile2.xml" />
     <Content Include="XMLFile1.xml" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
