--- a/Gondwana.Common/Gondwana.csproj
+++ b/Gondwana.Common/Gondwana.csproj
@@ -15,4 +15,11 @@
 	  <PackageReference Include="SharpZipLib" Version="1.4.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="App.xsd">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <SubType>Designer</SubType>
+	  </None>
+	</ItemGroup>
+
 </Project>
