more project migration cleanup; getting Slider project running again

--- a/Games/Slider/App.config
+++ b/Games/Slider/App.config
@@ -4,8 +4,7 @@
     <add key="TargetFPS" value="120"/>
     <add key="SamplingTimeForCPS" value="1.5"/>
     <add key="TimeBetweenKeyboardEvents" value="0.03"/>
-    <add key="MCIErrorsThrowExceptions" value="true"/>
     <add key="VisibleSurfaceRefreshTimer" value="1.5"/>
     <add key="ResizedFrameCacheLimit" value="1000"/>
 	</appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
+</configuration>
