--- a/Games/Spot/Spot.csproj
+++ b/Games/Spot/Spot.csproj
@@ -15,4 +15,7 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Gondwana.Common\Gondwana.csproj" />
+  </ItemGroup>
 </Project>
