--- a/Gondwana.Common/Gondwana.csproj
+++ b/Gondwana.Common/Gondwana.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 	  <PackageReference Include="NAudio" Version="2.2.1" />
 	  <PackageReference Include="SharpZipLib" Version="1.4.2" />
+	  <PackageReference Include="SkiaSharp" Version="3.119.0" />
 	</ItemGroup>
 
 	<ItemGroup>
